chore: upgrade tailwindcss

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,9 @@
+@import "tailwindcss";
+@config "../../tailwind.config.ts";
+
 @view-transition {
   navigation: auto;
 }
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @layer base {
   :root {
